--- a/templates/queue.html
+++ b/templates/queue.html
@@ -16,7 +16,7 @@
                     <th>#</th>
                     <th>Company</th>
                     <th>Job Title</th>
-                    <th>Printer</th>
+                    <th>Print Job</th>
                   </tr>
                 </thead>
                 <tbody>
