--- a/templates/submit.html
+++ b/templates/submit.html
@@ -3,6 +3,27 @@
 
 {% include "navbar.html" %}
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="static/js/upload.js"></script>
+
+<div class="modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" id = "success-note" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body…</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="bs-docs-section">
         <div class="row">
           <div class="col-lg-12">
@@ -57,7 +78,7 @@
                     <label for="textArea" class="col-lg-2 control-label">Additional Specifications</label>
                     <div class="col-lg-10">
                       <textarea class="form-control" rows="3" name="inputAdditional"></textarea>
-                      <span class="help-block">Add any additional information or specifications here.</span>
+                      <span class="help-block">Add any additional information or specifications here. Please specify what your print will be used for (display, mechanical part, etc.) and if there are any specifications you need (material, preferred tolerance, or other advanced options)</span>
                     </div>
                   </div>
                   <div class="form-group">
@@ -67,13 +88,22 @@
                       <span class="help-block">The model must be a ".stl" file! We do not accept other formats for printing.</span>
                     </div>
                   </div>
+                  
                   <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
-                      <button type="submit" class="btn btn-primary">Submit</button>
+                      <div class="progress progress-striped active">
+                    <div  id="progress-bar" class="progress-bar" style="width: 0%"></div>
+                  </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-lg-10 col-lg-offset-2">
+                      <button id="submit-button" type="submit" class="btn btn-primary">Submit</button>
                     </div>
                   </div>
                 </fieldset>
               </form>
+              
             </div>
           </div>
 </html>
