--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,11 +26,11 @@
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                       <li><a href="/">Home</a></li>
-                      <li><a href="/submit">Submit Print Jobs</a></li>
                       <li><a href="/view">View Current Print Jobs</a></li>
+                      <li><a href="/submit">Submit Print Jobs</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#">About MADE@</a></li>
+                      <li><a href="http://masschallenge.org/programs/made">About MADE@</a></li>
                     </ul>
                   </div>
                 </div>
